# watsonx-LLM

./: Dockerfile  README.md  app.py  chainlit.md  pyproject.toml  requirements.txt
