[tool.poetry]
name = "watsonx-llm"
version = "0.1.0"
description = "watsonx.ai llm chainlit app"
authors = ["Ivan Herrera <ivanraulherrera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chainlit = "^1.1.306"
requests = "^2.32.3"
pandas = ">=0.24.2,<2.2.0"
ibm-watsonx-ai = "^1.0.11"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
